--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: gggenes
-Title: What the Package Does (one line, title case)
-Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Title: Draw gene maps in ggplot2
+Version: 0.1
+Authors@R: person("David", "Wilkins", email = "david@wilkox.org", role = c("aut", "cre"))
 Depends:
-    R (>= 3.3.2)
+    R (>= 3.3.2),
+    ggplot2 (>= 2.2.1)
 Imports:
     grid
-License: What license is it under?
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
