Move 'Depends' packages to 'Imports'

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: gggenes
-Title: Draw gene maps in ggplot2
+Title: Draw Gene Maps in 'ggplot2'
 Version: 0.1.9001
-Authors@R: person("David", "Wilkins", email = "david@wilkox.org", role = c("aut", "cre"))
+Authors@R: person("David", "Wilkins", email = "david@wilkox.org",
+                  role = c("aut", "cre"))
+Description: Provides a 'ggplot2' geom and helper functions for drawing gene
+  arrow maps.
 Depends:
-    R (>= 3.3.2),
+    R (>= 3.3.2)
+Imports:
+    grid (>= 3.4.1),
     ggplot2 (>= 2.2.1),
     dplyr(>= 0.5.0)
-Imports:
-    grid
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
