--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+URL: https://github.com/wilkox/gggenes
+BugReports: https://github.com/wilkox/gggenes/issues
 Suggests: testthat,
     knitr,
     rmarkdown
