Add `geom_gene_label` (#3)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: gggenes
 Title: Draw Gene Arrow Maps in 'ggplot2'
-Version: 0.2.0.9001
+Version: 0.2.0.9002
 Authors@R: person("David", "Wilkins", email = "david@wilkox.org",
                   role = c("aut", "cre"))
 Description: Provides a 'ggplot2' geom and helper functions for drawing gene
@@ -9,7 +9,8 @@ Depends:
     R (>= 3.3.2)
 Imports:
     grid (>= 3.4.1),
-    ggplot2 (>= 2.2.1)
+    ggplot2 (>= 2.2.1),
+    ggfittext (>= 0.4.3)
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
