--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(makeContent,subgenearrowtree)
 export(geom_gene_arrow)
 export(geom_gene_label)
 export(geom_subgene_arrow)
+export(geom_subgene_label)
 export(make_alignment_dummies)
 export(theme_genes)
 import(ggfittext)
