--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,5 +21,6 @@ URL: https://github.com/wilkox/gggenes
 BugReports: https://github.com/wilkox/gggenes/issues
 Suggests: testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    vdiffr
 VignetteBuilder: knitr
