--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
 sudo: false
 cache: packages
+
+r_packages:
+- ggplot2
 
 r_github_packages:
 - r-lib/vdiffr
