Add support for `coord_flip()` (#38)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,10 @@
 
 S3method(makeContent,featurelabeltree)
 S3method(makeContent,featuretree)
+S3method(makeContent,flipfeaturelabeltree)
+S3method(makeContent,flipfeaturetree)
+S3method(makeContent,flipgenearrowtree)
+S3method(makeContent,flipsubgenearrowtree)
 S3method(makeContent,genearrowtree)
 S3method(makeContent,subgenearrowtree)
 export(geom_feature)
@@ -12,6 +16,7 @@ export(geom_subgene_arrow)
 export(geom_subgene_label)
 export(make_alignment_dummies)
 export(theme_genes)
+export(theme_genes_flipped)
 import(ggfittext)
 import(grid)
 importFrom(grid,makeContent)
