Add `geom_terminator()` and `geom_terminator_label()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,14 +6,20 @@ S3method(makeContent,flipfeaturelabeltree)
 S3method(makeContent,flipfeaturetree)
 S3method(makeContent,flipgenearrowtree)
 S3method(makeContent,flipsubgenearrowtree)
+S3method(makeContent,flipterminatorlabeltree)
+S3method(makeContent,flipterminatortree)
 S3method(makeContent,genearrowtree)
 S3method(makeContent,subgenearrowtree)
+S3method(makeContent,terminatorlabeltree)
+S3method(makeContent,terminatortree)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
 export(geom_gene_label)
 export(geom_subgene_arrow)
 export(geom_subgene_label)
+export(geom_terminator)
+export(geom_terminator_label)
 export(make_alignment_dummies)
 export(theme_genes)
 export(theme_genes_flipped)
