geom_feature() working in polar coordinates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(makeContent,flipgenearrowtree)
 S3method(makeContent,flipsubgenearrowtree)
 S3method(makeContent,flipterminatorlabeltree)
 S3method(makeContent,flipterminatortree)
+S3method(makeContent,polarfeaturetree)
 S3method(makeContent,polargenearrowtree)
 export(geom_feature)
 export(geom_feature_label)
