Add assembly scar glyph

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(makeContent,abovelabeltree)
 S3method(makeContent,aptamertree)
+S3method(makeContent,assemblyscartree)
 S3method(makeContent,cartesiansubgenearrowtree)
 S3method(makeContent,featurelabeltree)
 S3method(makeContent,featuretree)
@@ -12,6 +13,8 @@ S3method(makeContent,terminatorlabeltree)
 S3method(makeContent,terminatortree)
 export(geom_aptamer)
 export(geom_aptamer_label)
+export(geom_assembly_scar)
+export(geom_assembly_scar_label)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
