Add blunt restriction sites

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(makeContent,abovelabeltree)
 S3method(makeContent,aptamertree)
 S3method(makeContent,assemblyscartree)
+S3method(makeContent,bluntrestrictionsitetree)
 S3method(makeContent,cartesiansubgenearrowtree)
 S3method(makeContent,featurelabeltree)
 S3method(makeContent,featuretree)
@@ -15,6 +16,8 @@ export(geom_aptamer)
 export(geom_aptamer_label)
 export(geom_assembly_scar)
 export(geom_assembly_scar_label)
+export(geom_blunt_restriction_site)
+export(geom_blunt_restriction_site_label)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
