--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(makeContent,flipterminatorlabeltree)
 S3method(makeContent,genearrowtree)
 S3method(makeContent,terminatorlabeltree)
 S3method(makeContent,terminatortree)
+export(geom_CDS)
 export(geom_aptamer)
 export(geom_aptamer_label)
 export(geom_assembly_scar)
