--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ S3method(makeContent,featuretree)
 S3method(makeContent,flipsubgenearrowtree)
 S3method(makeContent,flipterminatorlabeltree)
 S3method(makeContent,genearrowtree)
+S3method(makeContent,insidelabeltree)
 S3method(makeContent,terminatorlabeltree)
 S3method(makeContent,terminatortree)
 export(geom_CDS)
+export(geom_CDS_label)
 export(geom_aptamer)
 export(geom_aptamer_label)
 export(geom_assembly_scar)
