--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(makeContent,aptamertree)
 S3method(makeContent,assemblyscartree)
 S3method(makeContent,bluntrestrictionsitetree)
 S3method(makeContent,cartesiansubgenearrowtree)
+S3method(makeContent,chromosomallocustree)
 S3method(makeContent,featurelabeltree)
 S3method(makeContent,featuretree)
 S3method(makeContent,flipsubgenearrowtree)
@@ -21,6 +22,7 @@ export(geom_assembly_scar)
 export(geom_assembly_scar_label)
 export(geom_blunt_restriction_site)
 export(geom_blunt_restriction_site_label)
+export(geom_chromosomal_locus)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
