--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(geom_assembly_scar_label)
 export(geom_blunt_restriction_site)
 export(geom_blunt_restriction_site_label)
 export(geom_chromosomal_locus)
+export(geom_chromosomal_locus_label)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
