Add geom_circular_plasmid() and geom_circular_plasmid_label()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(makeContent,assemblyscartree)
 S3method(makeContent,bluntrestrictionsitetree)
 S3method(makeContent,cartesiansubgenearrowtree)
 S3method(makeContent,chromosomallocustree)
+S3method(makeContent,circularplasmidtree)
 S3method(makeContent,featurelabeltree)
 S3method(makeContent,featuretree)
 S3method(makeContent,flipsubgenearrowtree)
@@ -24,6 +25,8 @@ export(geom_blunt_restriction_site)
 export(geom_blunt_restriction_site_label)
 export(geom_chromosomal_locus)
 export(geom_chromosomal_locus_label)
+export(geom_circular_plasmid)
+export(geom_circular_plasmid_label)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
