--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(makeContent,flipsubgenearrowtree)
 S3method(makeContent,flipterminatorlabeltree)
 S3method(makeContent,genearrowtree)
 S3method(makeContent,insidelabeltree)
+S3method(makeContent,stemtoptree)
 S3method(makeContent,terminatorlabeltree)
 S3method(makeContent,terminatortree)
 export(geom_CDS)
@@ -27,6 +28,7 @@ export(geom_chromosomal_locus)
 export(geom_chromosomal_locus_label)
 export(geom_circular_plasmid)
 export(geom_circular_plasmid_label)
+export(geom_cleavage_site)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
