Add geom_cleavage_site_label() and begin removing 'variant'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(geom_chromosomal_locus_label)
 export(geom_circular_plasmid)
 export(geom_circular_plasmid_label)
 export(geom_cleavage_site)
+export(geom_cleavage_site_label)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
