Add geom_engineered_region() and geom_engineed_region_label()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(makeContent,bluntrestrictionsitetree)
 S3method(makeContent,cartesiansubgenearrowtree)
 S3method(makeContent,chromosomallocustree)
 S3method(makeContent,circularplasmidtree)
+S3method(makeContent,engineeredregiontree)
 S3method(makeContent,featurelabeltree)
 S3method(makeContent,featuretree)
 S3method(makeContent,flipsubgenearrowtree)
@@ -30,6 +31,8 @@ export(geom_circular_plasmid)
 export(geom_circular_plasmid_label)
 export(geom_cleavage_site)
 export(geom_cleavage_site_label)
+export(geom_engineered_region)
+export(geom_engineered_region_label)
 export(geom_feature)
 export(geom_feature_label)
 export(geom_gene_arrow)
