Tweak pkgdown configuration

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,12 +1,15 @@
+url: https://wilkox.org/gggenes/
+template:
+  bootstrap: 5
 navbar:
   structure:
     left:
-      - home
-      - intro
-      - reference
-      - articles
-      - tutorials
-      - news
+    - home
+    - intro
+    - reference
+    - articles
+    - tutorials
+    - news
     right: github
   components:
     home:
@@ -18,14 +21,12 @@ navbar:
     articles:
       text: Articles
       menu:
-        - text: Introduction to 'gggenes'
-          href: articles/introduction-to-gggenes.html
+      - text: Introduction to 'gggenes'
+        href: articles/introduction-to-gggenes.html
     news:
       text: Changelog
       href: news/index.html
     github:
       icon: fa-github
       href: https://github.com/wilkox/gggenes
-url: https://wilkox.org/gggenes
-template:
-  bootstrap: 5
+
