--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,33 +1,34 @@
 Package: gggenes
 Title: Draw Gene Arrow Maps in 'ggplot2'
 Version: 0.6.0.9002
-Authors@R: c(person("David", "Wilkins", email = "david@wilkox.org",
-                  role = c("aut", "cre")),
-             person("Zachary", "Kurtz", email = "zdkurtz@gmail.com",
-                  role = c("ctb")))
+Authors@R: c(
+    person("David", "Wilkins", , "david@wilkox.org", role = c("aut", "cre")),
+    person("Zachary", "Kurtz", , "zdkurtz@gmail.com", role = "ctb")
+  )
 Description: A 'ggplot2' extension for drawing gene arrow maps.
+License: GPL-2
+URL: https://wilkox.org/gggenes/
+BugReports: https://github.com/wilkox/gggenes/issues/
 Depends:
     R (>= 3.6)
 Imports:
-    grid (>= 3.3.0),
-    ggplot2 (>= 2.2.1),
+    cli (>= 3.6.1),
     ggfittext (>= 0.8.0),
-    rlang (>= 0.2.0),
+    ggplot2 (>= 2.2.1),
+    grid (>= 3.3.0),
     lifecycle,
-    cli (>= 3.6.1)
-License: GPL-2
-LazyData: true
-RoxygenNote: 7.3.3
-URL: https://wilkox.org/gggenes/
-BugReports: https://github.com/wilkox/gggenes/issues/
+    rlang (>= 0.2.0)
 Suggests: 
-    testthat (>= 3.0.0),
     knitr,
     rmarkdown,
-    vdiffr,
-    spelling
-VignetteBuilder: knitr
-Roxygen: list(markdown = TRUE)
+    spelling,
+    testthat (>= 3.0.0),
+    vdiffr
+VignetteBuilder: 
+    knitr
+Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
-Config/testthat/edition: 3
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.3
